fix width overflow

--- a/src/components/piano/piano.module.css
+++ b/src/components/piano/piano.module.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   padding: 4rem;
 
-  width: 100vw;
+  width: 100%;
   height: 100%;
 
   user-select: none;
